2007-03-24  Richard Dale  <rdale@foton.es>

	* The 'IsSmokeClass()' test now uses the Smoke class data cache
	* Renamed the method to retrieve a C# instance given a pointer to the C++
	  instance as 'GetInstance(). Given it an a boolean argument 'allInstances'
	  and if false, GetInstance() will only return instances that are custom 
	  subclasses of Qyoto classes. This is useful when dealing with overriden
	  virtual method callbacks, as only custom subclasses can have their own
	  slots or overriden virtual methods.
	* These two improvements give a 2-3 times speed up, and Qyoto now uses 
	  about 6 times less mill than it did a week ago.

2007-03-23  Richard Dale  <rdale@foton.es>

	* Cache various items in a dictionary with a key of the Smoke class's
	  type to avoid using reflection to look up the items each time. A timing
	  test consisting of starting the t14 cannon game and firing 5 shots at
	  force 40, used half the mill of the version without caching.

	* The following class is used to cache the data:

		public class SmokeClassData {
			public string className;
			public ConstructorInfo constructorInfo;
			public object[] constructorParamTypes;
			public MethodInfo proxyCreator;
			public FieldInfo smokeObjectField;
		}

		- classname: the C++ signature of the Smoke class
		- constructorInfo: the ConstructorInfo to construct a new instance
		- constructorParamTypes: the argument to pass to the constructorInfo
		- proxyCreator: the method to create the transparent proxy for the 
			new instance
		- smokeObjectField: the field for holding a pointer to the 
			smokeqyoto_object struct for the instance

	* Add an entry to the strong reference map for custom QWidget subclasses 
	  to prevent them being GC'd prematurally.

2007-03-22  Richard Dale  <rdale@foton.es>

	* Added debug methods for logging GCHandle.Alloc() and Free() calls
	* Freed GCHandles in a few places, but there are still a lot of leaks